[package]
name = "typed_phy"
version = "0.1.0"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.11"
phantasm = "0.1.1"

[dev-dependencies]
trybuild = "1.0.21"

[features]
# Curetly used only for readme doc tests
nightly = []
